<resources>
    <string name="app_name">School</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">logo</string>
    <string name="not_a_user_sign_up_here">Not a user? Sign Up here.</string>
    <string name="login">Login</string>
    <string name="already_a_user_sign_in_here">Already a user? Sign In here.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="text">Text</string>
    <string name="learn">Learn</string>
    <string name="start_a_new_future">Start a new Future</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="results_report">Results Report</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="profile">profile</string>
    <string name="profileTitle">Profile</string>
    <string name="test_marks_report">Test Marks Report</string>
    <string name="result">Result</string>
    <string name="test_marks">Test Marks</string>
    <string name="attendance">Attendance</string>
    <string name="dashboard">Dashboard</string>
    <string name="help">help</string>
    <string name="sampleclassname">sampleclassName</string>
    <string name="sampledate">sampleDate</string>
    <string name="change_date">Change Date</string>
    <string name="class_attendance">Class Attendance</string>
    <string name="save">SAVE</string>
    <string name="samplestudentname">sampleStudentName</string>
    <string name="edit_your_name">Edit Your Name</string>
    <string name="edit_your_address">Edit Your Address</string>
    <string name="edit_your_contactno">Edit Your ContactNo</string>
    <string name="edit_your_email_address">Edit Your Email Address</string>
    <string name="edit_your_gender">Edit Your Gender</string>
    <string name="enter_your_child_s_student_key">Enter Your Child\'s Student key</string>
    <string name="add_child">Add Child</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="save_profile">Save Profile</string>
    <string name="error_new_child">This student doesn\'t exist.</string>
    <string name="confirrm_child_added">Child Added.</string>
    <string name="message_edit_text_hint">Write Something</string>
    <string name="close">close</string>
</resources>