<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <group android:checkableBehavior="single"
        android:id="@+id/menu_grp_categories">
        <item android:title="@string/categories">
            <menu>
                <item
                    android:id="@+id/nav_attendance"
                    android:icon="@drawable/ic_attendance"
                    android:title="@string/attendance" />
                <item
                    android:id="@+id/nav_test_marks"
                    android:icon="@drawable/ic_test_marks"
                    android:title="@string/test_marks" />
                <item
                    android:id="@+id/nav_result"
                    android:icon="@drawable/ic_result"
                    android:title="@string/result" />
                <item
                    android:id="@+id/nav_notification"
                    android:icon="@drawable/ic_send_notification"
                    android:title="@string/notification" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/menu_grp_profile">
        <item android:title="@string/profileTitle">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_person"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>