<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:background="@drawable/round_border"
        android:hint="@string/edit_your_name"
        android:inputType="none"
        android:enabled="false" />


    <EditText
        android:id="@+id/etAddress"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:padding="16dp"
        android:background="@drawable/round_border"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/edit_your_address" />

    <EditText
        android:id="@+id/etContact"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/edit_your_contactno" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/edit_your_email_address" />

    <EditText
        android:id="@+id/etGender"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        android:background="@drawable/round_border"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:hint="@string/edit_your_gender" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_btn"
        android:padding="5dp"
        android:text="@string/profile_edit"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp"
        android:text="@string/save_profile"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:visibility="gone"
        android:background="@drawable/round_btn" />


</LinearLayout>